--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <li><a href="./lesson_02/index.html"> CSS intro</a></li>
                     <li><a href="./lesson_03/index.html">CSS box-model</a></li>
                     <li><a href="./lesson_04/index.html">Flexbox</a></li>
+                    <li><a href="./lesson_05/index.html">les5</a></li>
                 </ol>
             </td>
             <td>
@@ -38,6 +39,7 @@
                             >Шапка сайта</a
                         >
                     </li>
+                    <li><a href="./homeworks/task_05/index.html"> Movie rate</a></li>
                 </ol>
             </td>
         </table>
