--- a/homeworks/task_05/index.html
+++ b/homeworks/task_05/index.html
@@ -10,7 +10,7 @@
     <body>
         <!-- ваш код -->
 
-        <div>
+        <div class="general">
             <img class="img1" src="./movie1.webp" alt="1" />
             <div class="top-left">
                 <span>9.8</span>
@@ -21,8 +21,7 @@
             </div>
         </div>
         <!-- ----------------------------------------------------- -->
-
-        <div>
+        <div class="general">
             <img class="img2" src="./movie2.webp" alt="2" />
             <div class="top-left red">
                 <span>4.6</span>
