--- a/homeworks/task_06/index.html
+++ b/homeworks/task_06/index.html
@@ -1,12 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Cards</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <title>Cards</title>
+    </head>
+    <body>
+        <!-- 
     
-</body>
+    создайте галерию карточек по вкусу с персонажами / предметами - с тем, что захотите
+
+используйте grid для разметки контейнера родителя. сделайте карточку адаптивной с минимальным размером по ширине 300px - используйте minmax()
+
+на карточке должно быть название, картинка, описание
+
+используйте flex для разметки внутри карточки
+
+добавьте header, под который при скроле будут прятаться карточки (вспомните свойство position)  
+
+-->
+        <header>
+            <div class="nav">
+                <img class="shar" src="./images/shar.gif" alt="" />
+                <h1>Все Стадии Развития | Эволюция Шарингана</h1>
+            </div>
+        </header>
+
+        <main>
+            <div class="gallery">
+                <div class="items-grid">
+                    <span>Шаринган с 1-им томоэ</span>
+                    <img src="./images/1.png" alt="" />
+                    <p>
+                        На данной стадии глаза позволяют видеть более быстрые
+                        движения противника.
+                    </p>
+                </div>
+
+                <div class="items-grid">
+                    <span>Шаринган с 2-мя томоэ</span>
+                    <img src="./images/2.png" alt="" />
+                    <p>
+                        Пользователь может копировать дзюцу. Может использовать
+                        иллюзии, захватывая противника зрительным контактом.
+                    </p>
+                </div>
+
+                <div class="items-grid">
+                    <span>Шаринган с 3-мя томоэ</span>
+                    <img src="./images/3.png" alt="" />
+                    <p>
+                        Три томоэ дают максимальный контроль над Шаринганом.
+                        Появляются еще возможность использования запретных
+                        техник.
+                    </p>
+                </div>
+
+                <div class="items-grid">
+                    <span>Мангекью Шаринган</span>
+                    <img src="./images/4.png" alt="" />
+                    <p>
+                        ДКаждый пользователь Мангэкё получает индивидуальные
+                        способности. Например, Аматерасу , Камуи и другие.
+                    </p>
+                </div>
+
+                <div class="items-grid">
+                    <span>Мангекью Шаринган</span>
+                    <img src="./images/5.png" alt="" />
+                    <p>
+                        Способность использовать мощные иллюзии. Данная стадия
+                        шарингана дарует Сусано — гигантское человекоподобное
+                        существо из чакры, которое окружает своего обладателя.
+                    </p>
+                </div>
+
+                <div class="items-grid">
+                    <span>Вечный Мангекью Шаринган</span>
+                    <img src="./images/6.png" alt="" />
+                    <p>
+                        Владелец такого Шарингана, может, сколько угодно
+                        использовать свои уникальные техники без вреда для себя
+                    </p>
+                </div>
+
+                <div class="items-grid">
+                    <span>Риннеган</span>
+                    <img src="./images/7.png" alt="" />
+                    <p>
+                        C помощью него можно увидеть поток чакры в теле.
+                        Обучиться с легкостью любой технике. В арсенале
+                        появляется 5 стихий. Способность создавать черные
+                        приемники. Владелец таких глаз может противостоять
+                        Бесконечно Тсукиеми и прочесть полностью каменную плину
+                        клана Учиха. В арсенале появляется Техника Шести Путей.
+                    </p>
+                </div>
+
+                <div class="items-grid">
+                    <span>Ринне Шаринган</span>
+                    <img src="./images/8.png" alt="" />
+                    <p>
+                        Обладает всеми способностями шарингана + к этому можно
+                        использовать для Бесконечно Тсукиёми. К тому же есть
+                        возможность телепортации как себя, так и остальных.
+                    </p>
+                </div>
+                <!-- ----------------------------- -->
+                <div class="items-grid">
+                    <span>Шаринган с 2-мя томоэ</span>
+                    <img src="./images/2.png" alt="" />
+                    <p>
+                        Пользователь может копировать дзюцу. Может использовать
+                        иллюзии, захватывая противника зрительным контактом.
+                    </p>
+                </div>
+
+                <div class="items-grid">
+                    <span>Шаринган с 3-мя томоэ</span>
+                    <img src="./images/3.png" alt="" />
+                    <p>
+                        Три томоэ дают максимальный контроль над Шаринганом.
+                        Появляются еще возможность использования запретных
+                        техник.
+                    </p>
+                </div>
+
+                <div class="items-grid">
+                    <span>Мангекью Шаринган</span>
+                    <img src="./images/4.png" alt="" />
+                    <p>
+                        ДКаждый пользователь Мангэкё получает индивидуальные
+                        способности. Например, Аматерасу , Камуи и другие.
+                    </p>
+                </div>
+
+                <div class="items-grid">
+                    <span>Мангекью Шаринган</span>
+                    <img src="./images/5.png" alt="" />
+                    <p>
+                        Способность использовать мощные иллюзии. Данная стадия
+                        шарингана дарует Сусано — гигантское человекоподобное
+                        существо из чакры, которое окружает своего обладателя.
+                    </p>
+                </div>
+
+                <div class="items-grid">
+                    <span>Вечный Мангекью Шаринган</span>
+                    <img src="./images/6.png" alt="" />
+                    <p>
+                        Владелец такого Шарингана, может, сколько угодно
+                        использовать свои уникальные техники без вреда для себя
+                    </p>
+                </div>
+
+                <div class="items-grid">
+                    <span>Риннеган</span>
+                    <img src="./images/7.png" alt="" />
+                    <p>
+                        C помощью него можно увидеть поток чакры в теле.
+                        Обучиться с легкостью любой технике. В арсенале
+                        появляется 5 стихий. Способность создавать черные
+                        приемники. Владелец таких глаз может противостоять
+                        Бесконечно Тсукиеми и прочесть полностью каменную плину
+                        клана Учиха. В арсенале появляется Техника Шести Путей.
+                    </p>
+                </div>
+
+                <div class="items-grid">
+                    <span>Ринне Шаринган</span>
+                    <img src="./images/8.png" alt="" />
+                    <p>
+                        Обладает всеми способностями шарингана + к этому можно
+                        использовать для Бесконечно Тсукиёми. К тому же есть
+                        возможность телепортации как себя, так и остальных.
+                    </p>
+                </div>
+            </div>
+        </main>
+    </body>
 </html>
