--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
                         <li>
 <a href="./homeworks/task_06/">Сектка карточек</a>
+<li><a href="./lesson_07/index.html">Верстка сайта: Berlin.de</a></li>
 
                         </li>
                     </ol>
