--- a/cons_02/index.html
+++ b/cons_02/index.html
@@ -20,48 +20,45 @@
             <main>
                 <section class="latest-episodes-section">
                     <div class="section-title-container">
-                        <div>Latest episodes</div>
-                        <button>View all episodes</button>
+                        <div class="title=Latest-episode">Latest episodes</div>
+                        <button class="main-button">View all episodes</button>
                     </div>
+
+
                     <div class="episode-card">
-                        <div>
-                            <img
-                                src="https://s3-alpha-sig.figma.com/img/2dc7/4b40/297660480ff9140760d8f8d49c3b802b?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=JqNomke~CED42g~3PNMv3K1y042x~4csLEIfE~Hx3g3lgLSd~WPK4ymOl-A4fAEcWyEEnZA53Bbie5stfKCoNEjbr1D1XTDouRLKOEHoVqvmMZ75cGXcB~Yee4FBTu4Gwh0ywopX5izwQ4XWOfvXps3xSYI1l0a~Rv7GAhWv38s3~d5rw34RcJ7O1187KWVEPblPWWz1UmZexnERsCAqdM-v295Qyz~c4euuW50KtOTHqpB6aPoJf9yEug3UJafzzFpGbtha8nJNnM72FRoUDaOhehNXl2JZ~lFCEsAvo-5d3ywUn0LfHjsj9nXzbKdwHSWLtr9veXj2-qnJGnoqcQ__"
-                                alt="micro"
-                            />
+                        <div class="image-container">
+                            <img src="./pic/1.jpeg" alt="micro"/>
                         </div>
-                        <div class="comments-container">
-                            <div>Mic tricks to take you to the next level</div>
-                            <p>
+                        <div class="episode-content-container">
+                            <div class="episode-card-title">Mic tricks to take you to the next level</div>
+                            <p class="episode-card-description">
                                 Stop rolling with those default settings on your
                                 mic. These small tweaks will take you from
                                 sounding good to great.
                             </p>
-                            <button>View Episode Details</button>
+                            <button class="main-button">View Episode Details</button>
                         </div>
                     </div>
-
-                    <div>
-                        <div>
-                            <div>I can’t recommend this podcast enough</div>
-                            <div>Betty Lacey</div>
+                    <div class="comments-container">
+                        <div class="commemt-card">
+                            <div  class="comment-text">I can’t recommend this podcast enough</div>
+                            <div class="comment-owner">Betty Lacey</div>
                         </div>
-                        <div>
-                            <div>Jacob is the best in the business</div>
-                            <div>Adam Driver</div>
+                        <div class="commemt-card">
+                            <div class="comment-text">Jacob is the best in the business</div>
+                            <div class="comment-owner">Adam Driver</div>
                         </div>
-                        <div>
-                            <div>A wealth of audio knowledge</div>
-                            <div>Marcus Brown</div>
+                        <div class="commemt-card">
+                            <div class="comment-text">A wealth of audio knowledge</div>
+                            <div class="comment-owner">Marcus Brown</div>
                         </div>
                     </div>
                 </section>
             </main>
-            <footer>
-                <div>
-                    <div>Castаway</div>
-
-                    <div>
+            <footer >
+                <div >
+                    <div class="logo-footer">Castаway</div>
+                    <div class="">
                         <div>
                             <a href="">Home</a>
                             <a href="">About</a>
