--- a/lesson_07/index.html
+++ b/lesson_07/index.html
@@ -491,57 +491,57 @@
 
             <div class="first-foot">
                 <div class="colems">
-                    <p class="txt-bold">Touren</p>
+                    <p class="txt-bold sixtenthpx-two">Touren</p>
 
-                    <a>Dampferfahrten</a>
-                    <a>Stadtführungen</a>
-                    <a>Stadtrundfahrten</a>
-                    <a>Fahrradtouren</a>
-                    <a>Alle Touren</a>
+                    <a class="sixtenthpx">Dampferfahrten</a>
+                    <a class="sixtenthpx">Stadtführungen</a>
+                    <a class="sixtenthpx">Stadtrundfahrten</a>
+                    <a class="sixtenthpx">Fahrradtouren</a>
+                    <a class="sixtenthpx">Alle Touren</a>
                 </div>
                 <div class="colems">
-                    <p class="txt-bold">Berlin- Informationen</p>
+                    <p class="txt-bold sixtenthpx-two">Berlin- Informationen</p>
 
-                    <a>Nahverkehr</a>
-                    <a>Flughafen</a>
-                    <a>Bahnhöfe</a>
-                    <a>Stadtplan</a>
-                    <a>Infos A-Z</a>
+                    <a class="sixtenthpx">Flughafen</a>
+                    <a class="sixtenthpx">Bahnhöfe</a>
+                    <a class="sixtenthpx">Nahverkehr</a>
+                    <a class="sixtenthpx">Stadtplan</a>
+                    <a class="sixtenthpx">Infos A-Z</a>
                 </div>
 
                 <div class="colems">
-                    <p class="txt-bold">Sehenswürdigkeiten</p>
-                    <a>Highlights</a>
-                    <a>Gedenkstätten</a>
-                    <a>Regierungsbauten</a>
-                    <a>Schlösser und Burgen</a>
-                    <a>Alle Sehenswürdigkeiten</a>
+                    <p class="txt-bold sixtenthpx-two">Sehenswürdigkeiten</p>
+                    <a class="sixtenthpx">Highlights</a>
+                    <a class="sixtenthpx">Gedenkstätten</a>
+                    <a class="sixtenthpx">Regierungsbauten</a>
+                    <a class="sixtenthpx">Schlösser und Burgen</a>
+                    <a class="sixtenthpx">Alle Sehenswürdigkeiten</a>
                 </div>
                 <div class="colems">
-                    <p class="txt-bold">Insider-Tipps</p>
+                    <p class="txt-bold sixtenthpx-two">Insider-Tipps</p>
 
-                    <a>Für Abenteurer</a>
-                    <a>Für Foodies</a>
-                    <a>Für Romantiker</a>
-                    <a>Berlin mit den Eltern</a>
-                    <a>Alle Insidertipps</a>
+                    <a class="sixtenthpx">Für Abenteurer</a>
+                    <a class="sixtenthpx">Für Foodies</a>
+                    <a class="sixtenthpx">Für Romantiker</a>
+                    <a class="sixtenthpx">Berlin mit den Eltern</a>
+                    <a class="sixtenthpx">Alle Insidertipps</a>
                 </div>
                 <div class="colems">
-                    <p class="txt-bold">Unterkünfte</p>
+                    <p class="txt-bold sixtenthpx-two">Unterkünfte</p>
 
-                    <a>Hotels</a>
-                    <a>Pensionen</a>
-                    <a>Hostels</a>
-                    <a>Campingplätze</a>
-                    <a>Alle Unterkünfte </a>
+                    <a class="sixtenthpx">Hotels</a>
+                    <a class="sixtenthpx">Pensionen</a>
+                    <a class="sixtenthpx">Hostels</a>
+                    <a class="sixtenthpx">Campingplätze</a>
+                    <a class="sixtenthpx">Alle Unterkünfte </a>
                 </div>
                 <div class="colems">
-                    <p class="txt-bold">Brandenburg entdecken</p>
+                    <p class="txt-bold sixtenthpx-two">Brandenburg entdecken</p>
 
-                    <a>Potsdam</a>
-                    <a>Veranstaltungen</a>
-                    <a>Wanderwege</a>
-                    <a>Alle Ausflugsziele </a>
+                    <a class="sixtenthpx">Potsdam</a>
+                    <a class="sixtenthpx">Veranstaltungen</a>
+                    <a class="sixtenthpx">Wanderwege</a>
+                    <a class="sixtenthpx">Alle Ausflugsziele </a>
                 </div>
             </div>
         </div>
@@ -553,62 +553,65 @@
                 </a>
             </div>
 
+
+
+            <div class="colemss">
             <div class="links-foot">
                 <div class="colems">
-                    <p class="txt-bold">Hauptstadtportal</p>
+                    <p class="txt-bold sixtenthpx-two">Hauptstadtportal</p>
 
-                    <a>Impressum</a>
-                    <a>Kontakt</a>
-                    <a>Datenschutzerklärun</a>
-                    <a>Erklärung zur Barrierefreiheit</a>
-                    <a>AGB</a>
+                    <a class="sixtenthpx">Impressum</a>
+                    <a class="sixtenthpx">Kontakt</a>
+                    <a class="sixtenthpx">Datenschutzerklärun</a>
+                    <a class="sixtenthpx">Erklärung zur Barrierefreiheit</a>
+                    <a class="sixtenthpx">AGB</a>
                 </div>
                 <div class="colems">
-                    <p class="txt-bold">Politik & Verwaltung</p>
+                    <p class="txt-bold sixtenthpx-two">Politik & Verwaltung</p>
 
-                    <a>Service-Portal</a>
-                    <a>Bürgertelefon 115</a>
-                    <a>Terminvereinbarung</a>
-                    <a>Presse</a>
-                    <a>Karriere im Land Berlin</a>
+                    <a class="sixtenthpx">Service-Portal</a>
+                    <a class="sixtenthpx">Bürgertelefon 115</a>
+                    <a class="sixtenthpx">Terminvereinbarung</a>
+                    <a class="sixtenthpx">Presse</a>
+                    <a class="sixtenthpx">Karriere im Land Berlin</a>
                 </div>
 
                 <div class="colems">
-                    <p class="txt-bold">Behörden</p>
+                    <p class="txt-bold sixtenthpx-two">Behörden</p>
                     Behörden
-                    <a>Behörden A-Z</a>
-                    <a>Senatsverwaltungen</a>
-                    <a>Bezirksämter</a>
-                    <a>Bürgerämter</a>
-                    <a>Jobcenter</a>
+                    <a class="sixtenthpx">Behörden A-Z</a>
+                    <a class="sixtenthpx">Senatsverwaltungen</a>
+                    <a class="sixtenthpx">Bezirksämter</a>
+                    <a class="sixtenthpx">Bürgerämter</a>
+                    <a class="sixtenthpx">Jobcenter</a>
                 </div>
                 <div class="colems">
-                    <p class="txt-bold">Berlin erleben</p>
+                    <p class="txt-bold sixtenthpx-two">Berlin erleben</p>
 
-                    <a>Kultur</a>
-                    <a>Tourismus</a>
-                    <a>Stadtleben</a>
-                    <a>Wirtschaft</a>
-                    <a>BerlinFinder</a>
+                    <a class="sixtenthpx">Kultur</a>
+                    <a class="sixtenthpx">Tourismus</a>
+                    <a class="sixtenthpx">Stadtleben</a>
+                    <a class="sixtenthpx">Wirtschaft</a>
+                    <a class="sixtenthpx">BerlinFinder</a>
                 </div>
                 <div class="colems">
-                    <p class="txt-bold">Extras</p>
+                    <p class="txt-bold sixtenthpx-two">Extras</p>
 
-                    <a>Newsletter</a>
-                    <a>Wetter</a>
-                    <a>Notdienste</a>
-                    <a>Berlin.de-Mail buchen</a>
-                    <a>Berlin.de-Mail kündigen</a>
+                    <a class="sixtenthpx">Newsletter</a>
+                    <a class="sixtenthpx">Wetter</a>
+                    <a class="sixtenthpx">Notdienste</a>
+                    <a class="sixtenthpx">Berlin.de-Mail buchen</a>
+                    <a class="sixtenthpx">Berlin.de-Mail kündigen</a>
                 </div>
                 <div class="colems">
-                    <p class="txt-bold">In anderen Sprachen</p>
+                    <p class="txt-bold sixtenthpx-two">In anderen Sprachen</p>
 
-                    <a>English</a>
-                    <a>Français</a>
-                    <a>Italiano</a>
+                    <a class="sixtenthpx">English</a>
+                    <a class="sixtenthpx">Français</a>
+                    <a class="sixtenthpx">Italiano</a>
                 </div>
             </div>
-
+        </div>
             <div class="bla-bla-bla">Kushnarov Mykyta</div>
         </footer>
         <!-- --------------------------------------------------------------------------------------------------- -->
