--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         <li><a href="./lesson_05/index.html">Position</a></li>
                         <li>
                             <a href="./lesson_06/index.html">CSS grid layout</a>
+                            <li><a href="./lesson_09/index.html">DOM</a></li>
                         </li>
                     </ol>
                 </div>
@@ -57,6 +58,10 @@
 <a href="./homeworks/task_06/">Сектка карточек</a>
 <li><a href="./lesson_07/index.html">Верстка сайта: Berlin.de</a></li>
 
+                        </li>
+
+                        <li>
+                            <a href="./homeworks/task_10/index.html">JS - начало</a>
                         </li>
                     </ol>
                 </div>
