--- a/homeworks/task_10/index.html
+++ b/homeworks/task_10/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Js</title>
 </head>
-<body>
+<body style="background-color: rgb(31, 31, 31);">
   <img style="height: 100vh; " src="./1.PNG" alt="">
     
 </body>
