--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                             <a href="./lesson_06/index.html">CSS grid layout</a>
                             <li><a href="./lesson_09/index.html">DOM</a></li>
                         </li>
+                        <li><a href="./lesson_11/">JS массивы и объекты</a></li>
                     </ol>
                 </div>
 
