--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                         <li>
                             <a href="./homeworks/task_10/index.html">JS - начало</a>
                         </li>
+                        <li>
+                            <a href="./lesson_20/index.html">Погода</a>
+                        </li>
                     </ol>
                 </div>
             </section>
